@@ -22,7 +22,7 @@ function SearchBuildRoute(&$query)
 	// Retrieve configuration options - needed to know which SEF URLs are used
 	$app = &JFactory::getApplication();
 	// Allows for searching on strings that include ".xxx" that appear to Apache as an extension
-	if (($app->getCfg('sef')) && ($app->getCfg('sef_rewrite')) && !($app->getCfg('sef_suffix'))) {
+	if (($app->getCfg('sef')) && ($app->getCfg('sef_rewrite')) && !($app->getCfg('sef_suffix')) && count($segments)) {
 		$segments[] .= '/';
 	}
 
