@@ -20,7 +20,7 @@ SEARCH="Search"
 SEARCH KEYWORD="Search Keyword"
 SEARCH_MESSAGE="Search term must be a minimum of 3 characters and a maximum of 20 characters."
 SEARCH ONLY="Search Only"
-SECTION/CATEGORY="Section/Category"
+SECTIONCATEGORY="Section/Category"
 TOTALRESULTSFOUND="Total: %s results found."
 WITH="with"
 SEARCH_AGAIN="Search Again"
