@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+01-Feb-2010 Hannes Papenberg
+# Fixed com_search router and model
+
 1-Feb-2010 Jean-Marie Simonet 
 ^ Refactored com_plugins ini keys + some
 
